--- a/blog/composer.json
+++ b/blog/composer.json
@@ -15,9 +15,11 @@
         "laravel/framework": "^7.0",
         "laravel/helpers": "^1.4",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "2.4"
+        "laravel/ui": "2.4",
+        "nesbot/carbon": "^2.53"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.0",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
